--- a/whack-a-mole/whack-a-mole.html
+++ b/whack-a-mole/whack-a-mole.html
@@ -120,11 +120,26 @@
 
   const holes = [0,0,0,0,0,0,0,0,0];
   let started = false;
-  const score = 0;
+  let score = 0;
+  let time = 10;
+
   $start.addEventListener('click',() => {
     if(started) return;
     started = true;
     console.log('시작');
+
+    const timerId = setInterval( () => {
+      time = (time * 10 - 1) / 10; // 0.1초씩 줄인다. 컴퓨터는 소수점 계산이 약하므로 정수로 계산
+      $timer.textContent = time;
+      if(time === 0){
+        setTimeout( () => {
+          clearInterval(timerId);
+          clearInterval(tickId);
+          alert(`게임오버. 점수 : ${score}`);
+        }, 50);
+      }
+    }, 100);
+
     const tickId = setInterval(tick, 1000); // 1초 뒤에 실행
     tick(); // 한번 더 호출하므로써 클릭하자 마자 바로 이벤트 실행됨
   })
@@ -155,6 +170,31 @@
       }
     });
   }
+
+  $$cells.forEach(($cell, index) => {
+    $cell.querySelector('.gopher').addEventListener('click', (event) => {
+      if(!event.target.classList.contains('dead')){
+        score += 1;
+        $score.textContent = score;
+      }
+      event.target.classList.add('dead');
+      event.target.classList.add('hidden');
+      clearTimeout(holes[index]); // 기존 타이머 제거
+      setTimeout( () => {
+        holes[index] = 0;
+        event.target.classList.remove('dead');
+      }, 1000);
+    });
+    $cell.querySelector('.bomb').addEventListener('click', (event) => {
+      event.target.classList.add('boom');
+      event.target.classList.add('hidden');
+      clearTimeout(holes[index]);
+      setTimeout(() => {
+        holes[index] = 0;
+        event.target.classList.remove('boom');
+      }, 1000);
+    });
+  })
 
 </script>
 </body>
