--- a/whack-a-mole/whack-a-mole.html
+++ b/whack-a-mole/whack-a-mole.html
@@ -47,6 +47,7 @@
 <div>
   <span id="timer">8</span>초&nbsp;
   <span id="score">0</span>점
+  <span id="life">3</span> 목숨
   <button id="start">시작</button>
 </div>
 <div id="game">
@@ -117,18 +118,22 @@
   const $start = document.querySelector('#start');
   const $game = document.querySelector('#game');
   const $$cells = document.querySelectorAll('.cell');
+  const $life = document.querySelector('#life');
 
   const holes = [0,0,0,0,0,0,0,0,0];
   let started = false;
   let score = 0;
-  let time = 10;
+  let time = 60;
+  let life = 3;
+  let timerId;
+  let tickId;
 
   $start.addEventListener('click',() => {
     if(started) return;
     started = true;
     console.log('시작');
 
-    const timerId = setInterval( () => {
+    timerId = setInterval( () => {
       time = (time * 10 - 1) / 10; // 0.1초씩 줄인다. 컴퓨터는 소수점 계산이 약하므로 정수로 계산
       $timer.textContent = time;
       if(time === 0){
@@ -140,7 +145,7 @@
       }
     }, 100);
 
-    const tickId = setInterval(tick, 1000); // 1초 뒤에 실행
+    tickId = setInterval(tick, 1000); // 1초 뒤에 실행
     tick(); // 한번 더 호출하므로써 클릭하자 마자 바로 이벤트 실행됨
   })
 
@@ -186,6 +191,10 @@
       }, 1000);
     });
     $cell.querySelector('.bomb').addEventListener('click', (event) => {
+      if(!event.target.classList.contains('boom')){
+        life -= 1;
+        $life.textContent = life;
+      }
       event.target.classList.add('boom');
       event.target.classList.add('hidden');
       clearTimeout(holes[index]);
@@ -193,6 +202,14 @@
         holes[index] = 0;
         event.target.classList.remove('boom');
       }, 1000);
+    
+      if(life === 0){
+        clearInterval(timerId);
+        clearInterval(tickId);
+        setTimeout( () => {
+          alert(`게임오버. 점수:${score}`);
+        }, 50);
+      }
     });
   })
 
